[package]
name = "rust-arduino"
version = "0.1.0"
authors = ["Josh Mitchell <yoshanuikabundi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# A panic handler is needed.  This is a crate with the most basic one.
panic-halt = "0.2.0"
embedded-hal = "0.2.4"
max7219 = "0.3.0"
dht11 = "0.3.1"

[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"

[profile.dev]
panic = "abort"
opt-level = "s"
lto="fat"

[profile.release]
panic = "abort"
opt-level = "s"
lto="fat"
codegen-units = 1
